# Cruiser-OnboardROS

./: .gitignore  README.md
.config/autostart/: launch.desktop  launch.sh  root.sh
cruiser/: CMakeLists.txt  package.xml
cruiser/include/cruiser/: CruiserDrone.h  CruiserHeader.h
cruiser/launch/: cruiser.launch  cruiser_manifold.launch  cruiser_manifold_test.launch
cruiser/msg/: DeltaPosition.msg  Flag.msg  TrackingPosition.msg
cruiser/src/: cruiser_info_transport.cpp  mobile_msg.cpp  move.cpp  testLocation.cpp
cruiser_landing/: CMakeLists.txt  package.xml
cruiser_landing/src/: landing_alg_node.cpp  landing_move.cpp  move.cpp  testLocation.cpp
cruiser_lib/: CMakeLists.txt  package.xml
cruiser_lib/src/: landing_alg_node.cpp  tracking_alg_node.cpp
cruiser_tracking/: CMakeLists.txt  package.xml
cruiser_tracking/include/: targetver.h
cruiser_tracking/src/: testTracking.cpp  tracking_alg_node.cpp  tracking_move.cpp
dji_sdk_read_cam/: CMakeLists.txt  CMakeLists.txt~  package.xml
dji_sdk_read_cam/include/: fhog.hpp  targetver.h
dji_sdk_read_cam/launch/: manifold_cam.launch  manifold_cam.launch~  move_dji.launch~  my.launch
dji_sdk_read_cam/msg/: location.msg  location.msg~
dji_sdk_read_cam/src/: HoughCircle.cpp  fhog.cpp  kcftracker.cpp  location.cpp  monocular_measure.cpp  move.cpp  nv_cam.cpp  runtracker.cpp
move_dji/: CMakeLists.txt  CMakeLists.txt.save  CMakeLists.txt~  package.xml  package.xml~
move_dji/launch/: move_dji.launch  move_dji.launch~
move_dji/msg/: location.msg  location.msg~
move_dji/src/: move.cpp
(+4 files in other folders)
